--- a/ios/HRElite.xcodeproj/xcshareddata/xcschemes/HRElite.xcscheme
+++ b/ios/HRElite.xcodeproj/xcshareddata/xcschemes/HRElite.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "HRElite.app"
-               BlueprintName = "HRElite"
-               ReferencedContainer = "container:HRElite.xcodeproj">
+               BuildableName = "ArConsl.app"
+               BlueprintName = "ArConsl"
+               ReferencedContainer = "container:ArConsl.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "HREliteTests.xctest"
-               BlueprintName = "HREliteTests"
-               ReferencedContainer = "container:HRElite.xcodeproj">
+               BuildableName = "ArConslTests.xctest"
+               BlueprintName = "ArConslTests"
+               ReferencedContainer = "container:ArConsl.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "HRElite.app"
-            BlueprintName = "HRElite"
-            ReferencedContainer = "container:HRElite.xcodeproj">
+            BuildableName = "ArConsl.app"
+            BlueprintName = "ArConsl"
+            ReferencedContainer = "container:ArConsl.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "HRElite.app"
-            BlueprintName = "HRElite"
-            ReferencedContainer = "container:HRElite.xcodeproj">
+            BuildableName = "ArConsl.app"
+            BlueprintName = "ArConsl"
+            ReferencedContainer = "container:ArConsl.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
