--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "country-list": "^2.3.0",
     "lodash.filter": "^4.6.0",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.6.0",
     "patch-package": "^6.5.1",
     "react": "18.2.0",
     "react-native": "0.71.3",
